# budgeting-and-forecasting-tool

./: .gitattributes  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  NOTICE  README.md  SECURITY.md  setup.sh  setup_and_start.bat  start-bg.sh  start.bat
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
backend/: README.md  alembic.ini  conftest.py  pyproject.toml
backend/alembic/: env.py
backend/app/: __init__.py  config.py  main.py  schemas.py  security.py
backend/app/api/: router.py
backend/app/api/routes/: accounts.py  budgets.py  drivers.py  entries.py  forecasts.py  periods.py  reports.py  uploads.py  variance.py
backend/app/db/: __init__.py  models.py  session.py
backend/app/domain/: __init__.py  enums.py  money.py  periods.py
backend/app/domain/budgeting/: __init__.py  activity_based.py  incremental.py  modifiers.py  value_proposition.py  zero_based.py
backend/app/domain/drivers/: __init__.py  engine.py  formula.py
backend/app/domain/forecasting/: __init__.py  advanced.py  auto_select.py  baselines.py  classic.py  intervals.py  metrics.py  seasonality.py
backend/app/domain/ingestion/: __init__.py  parser.py  pivot.py  template.py  validator.py
backend/app/domain/reporting/: __init__.py  board_pack.py
backend/app/domain/variance/: __init__.py  bridge.py  budget_actual.py  cost_variances.py  flexible_budget.py  insights.py  materiality.py  sales_variances.py  sign.py
backend/app/services/: __init__.py  ai.py  lookup.py  variance_query.py
backend/scripts/: seed.py
backend/tests/: test_api.py  test_budgeting.py  test_drivers.py  test_forecasting.py  test_ingestion.py  test_reports.py  test_security.py  test_variance.py  test_variance_insights.py
(+59 files in other folders)
