[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "openfpa"
version = "0.1.0"
description = "Local-first open-source budgeting & forecasting (FP&A) engine"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "sqlmodel>=0.0.22",
    "sqlalchemy>=2.0",
    "alembic>=1.13",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "python-multipart>=0.0.9",
    "pandas>=2.2",
    "numpy>=1.26",
    "scipy>=1.13",
    "scikit-learn>=1.5",
    "python-calamine>=0.2",
    "openpyxl>=3.1",
]

[project.optional-dependencies]
# Heavy statistical models. Kept optional because statsforecast/numba and Prophet's
# Stan toolchain can be awkward on some platforms (notably Windows + Python 3.13).
forecasting = [
    "statsforecast>=1.7",
    "statsmodels>=0.14",
    "prophet>=1.1",
    "pmdarima>=2.0",
]
dev = [
    "pytest>=8.0",
    "httpx>=0.27",
    "ruff>=0.5",
    "mypy>=1.10",
]

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "W"]
# B008: FastAPI uses Depends()/File()/Query() as default args by design.
# UP042: `class X(str, Enum)` is intentional for broad compatibility.
ignore = ["B008", "UP042"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["E501"]  # long Decimal fixture lines are clearer unwrapped

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
plugins = []

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
